v_utils_macros/tests/compile_fail/primitives_unknown_struct_value.stderr
error: unknown `#[primitives(skip_serialise)]` on struct; the only supported value is `skip_serialize`
 --> $DIR/v_utils_macros/tests/compile_fail/primitives_unknown_struct_value.rs:6:14
  |
6 | #[primitives(skip_serialise)]
  |              ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

